fixed misbehaviour where scrolling while keeping activeness on a numeric input would alter the input number based  on number present inside it || also solved css layout problem where tailor section was given flex 1 by mistake

--- a/frontend/src/components/PrintBillModal.css
+++ b/frontend/src/components/PrintBillModal.css
@@ -128,8 +128,9 @@
 }
 
 .tailor-section {
+    
     position: relative;
-    flex: 1;
+    /* flex: 1; */
     display: flex;
     flex-direction: column;
     justify-content: center;
